# rules_img

./: .bazelignore  .bazelrc  .bazelrc.common  .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  HACKING.md  MODULE.bazel  README.md  flake.nix  gazelle-2366-fetch-repo-hash-zip.patch  go.mod  go.sum  hermetic_cc_toolchain.patch  prebuilt_lockfile.json  pull_tool_lockfile.json  renovate.json
e2e/cc/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  registry_assertions.json  toolchain.MODULE.bazel
e2e/cc/custom_standard_library/: BUILD.bazel
e2e/cc/image_from_binary_example/: BUILD.bazel  greeting.txt  main.cc
e2e/generic/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  hermetic_launcher.patch  registry_assertions.json  rules_runfiles_group_example.patch  rules_runfiles_group_example_loadmap_path_len_windows.patch
e2e/generic/apko/: BUILD.bazel
e2e/generic/bzl/: binary_with_runfiles_symlinks.bzl  fake_pkg.bzl  gen_link.bzl
e2e/generic/convert_oci/: BUILD.bazel
e2e/generic/cross_mount/: BUILD.bazel  requirements.txt
e2e/generic/custom_distroless_base_image/: BUILD.bazel  README.md  apt.lock.json  apt.yaml
e2e/generic/existing_tar_files/: BUILD.bazel
e2e/generic/extend/: BUILD.bazel
e2e/generic/fsmanifestinfo/: BUILD.bazel  app.sh  config.yaml  data.txt  defs.bzl
e2e/generic/index_with_selected_base/: BUILD.bazel
e2e/generic/load/: BUILD.bazel
e2e/generic/multi_deploy/: BUILD.bazel
e2e/generic/platform/: BUILD.bazel
e2e/generic/runfiles_group/: BUILD.bazel
e2e/generic/runfiles_group_info/: BUILD.bazel  README.md  app_code.txt  debug_tool.txt  defs.bzl  stdlib_file.txt  third_party_lib.txt
e2e/generic/supply_chain/: BUILD.bazel
e2e/go/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  main.go  registry_assertions.json
e2e/go/architecturevariant/: BUILD.bazel  architecturevariant_amd64base.go  architecturevariant_amd64v2.go  architecturevariant_amd64v3.go  architecturevariant_amd64v4.go  architecturevariant_arm64base.go  architecturevariant_arm64v8.1.go  architecturevariant_arm64v8.2.go  architecturevariant_arm64v8.3.go  architecturevariant_arm64v8.4.go  architecturevariant_arm64v8.5.go  architecturevariant_arm64v8.6.go  architecturevariant_arm64v8.7.go  architecturevariant_arm64v8.8.go  architecturevariant_arm64v8.9.go  architecturevariant_arm64v9.0.go  architecturevariant_arm64v9.1.go  architecturevariant_arm64v9.2.go  architecturevariant_arm64v9.3.go  architecturevariant_arm64v9.4.go  architecturevariant_arm64v9.5.go  architecturevariant_armbase.go  architecturevariant_armv5.go  architecturevariant_armv6.go  architecturevariant_armv7.go
e2e/go/compact_layers/: BUILD.bazel  compact_layers.go  defs.bzl
e2e/go/customization/: BUILD.bazel
e2e/go/image/: BUILD.bazel
e2e/go/image_from_binary_example/: BUILD.bazel
e2e/go/layer_from_binary_example/: BUILD.bazel
e2e/go/multiarch/: BUILD.bazel
e2e/go/platform/: BUILD.bazel
e2e/js/: BUILD.bazel  MODULE.bazel  package.json  registry_assertions.json
e2e/js/app/: BUILD.bazel
e2e/python/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  registry_assertions.json
e2e/python/image_from_binary_example/: BUILD.bazel
e2e/sbom/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  registry_assertions.json
e2e/sbom/app/: BUILD.bazel
e2e/sbom/signer/: BUILD.bazel
img/base/: BUILD.bazel
img/constraints/: BUILD.bazel
img/constraints/amd64/: BUILD.bazel
img/constraints/arm/: BUILD.bazel
img/constraints/arm64/: BUILD.bazel
img/constraints/ppc64le/: BUILD.bazel
img/constraints/riscv64/: BUILD.bazel
img/deploy_tool/: BUILD.bazel
img/deploy_tool/for_host/: BUILD.bazel
img/private/: BUILD.bazel  annotations_util.bzl  deploy_tool.bzl  download_blobs.bzl  download_blobs_test.bzl  empty_layer.bzl  file_for_host.bzl  image_from_binary.bzl  image_structure_test.bzl  image_toolchain.bzl  import.bzl  index.bzl  layer.bzl  layer_from_binary.bzl  layer_from_file.bzl  layer_from_pkg.bzl  layer_from_tar.bzl  layer_path_hints.bzl  load.bzl  load_spec.bzl  manifest.bzl  manifest_media_type.bzl  multi_deploy.bzl  optimize.bzl  oras_file_layer.bzl  oras_layer.bzl  push.bzl  push_metadata.bzl  push_spec.bzl  rbe_layer.bzl  resolved_toolchain.bzl  root_symlinks.bzl  sign_settings.bzl  signing_config.bzl  stamp.bzl
img/private/common/: BUILD.bazel  build.bzl  default_deploy_tool.bzl  deploy_attrs.bzl  deploy_helpers.bzl  inherit.bzl  layer_attrs.bzl  layer_helper.bzl  media_types.bzl  sparse_oci_layout.bzl  tar_layer.bzl  transitions.bzl  write_index_json.bzl
img/private/config/: BUILD.bazel  defs.bzl
img/private/conversion/: BUILD.bazel  index_from_oci_layout.bzl  manifest_from_oci_layout.bzl
img/private/extensions/: BUILD.bazel  images.bzl  images_helpers.bzl
img/private/host_tools/: BUILD.bazel  host_tools.bzl
img/private/integration_test_runner/: integration_test_runner.go
img/private/prebuilt/: prebuilt.bzl
img/private/providers/: BUILD.bazel  cross_mount_info.bzl  deploy_info.bzl  deploy_tool_info.bzl  image_structure_test_info.bzl  index_info.bzl  layer_config_info.bzl  layer_group_info.bzl  layers_info.bzl  load_config_info.bzl  load_settings_info.bzl  manifest_info.bzl  push_at_build_time_settings_info.bzl  push_config_info.bzl  push_settings_info.bzl  signing_config_info.bzl  single_layer_info.bzl  stamp_setting_info.bzl
img/private/release/: BUILD.bazel  defs.bzl
img/private/settings/: BUILD.bazel  (+4 more)
img/settings/: BUILD.bazel
img_tool/toolchain/: BUILD.bazel  def.bzl
modules/rules_img_internal_tools/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod  go.sum
modules/rules_img_signer_cosign/: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
modules/rules_img_signer_notation/: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
pull_tool/: BUILD.bazel  MODULE.bazel  go.mod  go.sum
tests/image_structure_test/: BUILD.bazel  defs.bzl  failing.yaml  hello.yaml  unsupported.yaml
tests/layering/: .gitattributes  BUILD.bazel  defs.bzl  empty_runfiles_repo.bzl
tests/mtree/: BUILD.bazel  defs.bzl
tests/signing/: BUILD.bazel
util/: BUILD.bazel  stardoc.bzl
(+686 files in other folders)
