exports_files(["MODULE.bazel"])

# gazelle:prefix github.com/bazel-contrib/rules_img

# The signer plugins under modules/ are standalone Bazel modules with their own
# MODULE.bazel and go.mod (distinct module prefixes such as
# github.com/bazel-contrib/rules_img_signer_cosign). Exclude them from the root
# Gazelle run, which uses the root prefix and would otherwise misresolve their
# internal imports (failing `git ls-remote` lookups) and rewrite their BUILD
# files incorrectly. The directive lives here rather than in a modules/BUILD.bazel
# so that no package boundary is introduced at modules/: the release filegroups
# below glob modules/*/** from the root package (the module dirs are in
# --deleted_packages), and a package at modules/ would make those globs empty.
# gazelle:exclude modules

filegroup(
    name = "all_files",
    srcs = [
        "BUILD.bazel",
        "LICENSE",
        "MODULE.bazel",
    ],
    visibility = ["//img/private/release:__subpackages__"],
)

filegroup(
    name = "tool_source_files",
    srcs = glob(
        ["img_tool/**"],
        allow_empty = True,
        exclude = [
            "img_tool/.bazelrc.common",
            "img_tool/.bazelrc",
            "img_tool/.vscode/**",
            "img_tool/tools/**",
        ],
    ),
    visibility = ["//img/private/release:__subpackages__"],
)

# Source files for the signer plugin modules, packaged into the offline BCR so
# `img deploy` signing can be exercised end-to-end (see //e2e/sbom). These are
# their own Bazel modules (own MODULE.bazel); their packages are listed in
# --deleted_packages so the root module can glob their source without building
# them here. The bazel-* convenience symlinks (created when a module is built
# standalone) are excluded via .bazelignore.
filegroup(
    name = "signer_cosign_source_files",
    srcs = glob(
        ["modules/rules_img_signer_cosign/**"],
        allow_empty = True,
    ),
    visibility = ["//img/private/release:__subpackages__"],
)

filegroup(
    name = "signer_notation_source_files",
    srcs = glob(
        ["modules/rules_img_signer_notation/**"],
        allow_empty = True,
    ),
    visibility = ["//img/private/release:__subpackages__"],
)

exports_files([
    ".bcr/metadata.template.json",
    "prebuilt_lockfile.json",
])
