module(name = "cc_e2e")

# BEGIN BAZEL_DEP
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../img_tool",
)

register_toolchains("@rules_img_tool//toolchain:all")
# END BAZEL_DEP

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")

bazel_dep(name = "rules_cc", version = "0.2.20", dev_dependency = True)

# All of the hermetic C++ toolchain setup is done in a separate MODULE.bazel file.
# This setup is not important for the e2e tests and it is hard to read.
include("//:toolchain.MODULE.bazel")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_cc",
    digest = "sha256:66aa873a4a14fb164aa01296058efd8253744606d72715e45acface073359faa",
    registry = "gcr.io",
    repository = "distroless/cc-debian12",
    tag = "nonroot",
)
