module(name = "generic_e2e")

# BEGIN BAZEL_DEP
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_pull_tool")
local_path_override(
    module_name = "rules_img_pull_tool",
    path = "../../pull_tool",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../img_tool",
)

register_toolchains("@rules_img_tool//toolchain:all")
# END BAZEL_DEP

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "tar.bzl", version = "0.7.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "container_structure_test", version = "1.21.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_distroless", version = "0.6.1")
single_version_override(
    module_name = "rules_distroless",
    patch_strip = 1,
    patches = ["//custom_distroless_base_image:rules_distroless.patch"],
)

single_version_override(
    module_name = "container_structure_test",
    patch_strip = 1,
    patches = ["//integrationtest/container_structure_test:container_structure_test.patch"],
)

# Configure apt for Debian packages
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")

# Configure Debian Bookworm packages
apt.install(
    name = "bookworm",
    lock = "//custom_distroless_base_image:apt.lock.json",
    manifest = "//custom_distroless_base_image:apt.yaml",
)
use_repo(apt, "bookworm")

# Configure Python and pip
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)
use_repo(python, "python_3_13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//integrationtest/testcontainers:requirements_lock.txt",
)
use_repo(pip, "pip")

# Pull Alpine Linux as base image
pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "alpine",
    digest = "sha256:4b7ce07002c69e8f3d704a9c5d6fd3053be500b7f1c69fc0d80990c2ad8dd412",
    layer_handling = "lazy",
    registries = [
        "mirror.gcr.io",
        "index.docker.io",
    ],
    repository = "library/alpine",
    tag = "3.22",
)

pull(
    name = "cuda",
    digest = "sha256:198208c45877a84c8fb35a06956e7fbef4ffabfa36f9c82148dc7bac454ba02a",
    registries = [
        "mirror.gcr.io",
        "index.docker.io",
    ],
    repository = "nvidia/cuda",
    tag = "13.0.0-tensorrt-runtime-ubuntu24.04",
)

# note that nginx does not have a tag here, relying solely on the digest
# this is not recommended, since tools like renovate use the tag to determine
# as a starting point for updates
# but it is supported
pull(
    name = "nginx",
    digest = "sha256:553f64aecdc31b5bf944521731cd70e35da4faed96b2b7548a3d8e2598c52a42",
    registries = [
        "mirror.gcr.io",
        "index.docker.io",
    ],
    repository = "library/nginx",
)

# image that contains a manifest without explicit mediaType field
pull(
    name = "envoy",
    digest = "sha256:4972515dd9a069b44beb43cebba7851596e72a8c61cd7a7c33d8f48efc5280ba",
    repository = "envoyproxy/envoy",
    tag = "v1.36.2",
)

pull(
    name = "neo4j",
    digest = "sha256:d8cb32426f618bb9a15a8847c42e5dade787e13cb2f1e63fee2a954c91a5bf73",
    layer_handling = "lazy",
    registry = "index.docker.io",
    repository = "library/neo4j",
    tag = "5.26.17-ubi9",
)
