module(name = "generic_e2e")

# BEGIN BAZEL_DEP
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../img_tool",
)

register_toolchains("@rules_img_tool//toolchain:all")
# END BAZEL_DEP

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "container_structure_test", version = "1.22.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_distroless", version = "0.8.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_python", version = "2.1.0")
bazel_dep(name = "rules_runfiles_group", version = "0.0.1-rc.5")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "tar.bzl", version = "0.10.5")
bazel_dep(name = "rules_runfiles_group_example")

single_version_override(
    module_name = "rules_distroless",
    patch_strip = 1,
    patches = ["//custom_distroless_base_image:rules_distroless.patch"],
)

archive_override(
    module_name = "rules_runfiles_group_example",
    integrity = "sha256-BvxyzlZEsR0BzH4b1dHTOgvt4lX2sifJrsGCpbdvnMc=",
    patch_strip = 2,
    patches = ["rules_runfiles_group_example.patch"],
    strip_prefix = "rules_runfiles_group-0.0.1-rc.5/example",
    urls = ["https://github.com/hermeticbuild/rules_runfiles_group/releases/download/v0.0.1-rc.5/rules_runfiles_group-v0.0.1-rc.5.tar.gz"],
)

# Configure apt for Debian packages
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")

# Configure Debian Bookworm packages
apt.install(
    name = "bookworm",
    lock = "//custom_distroless_base_image:apt.lock.json",
    manifest = "//custom_distroless_base_image:apt.yaml",
)
use_repo(apt, "bookworm")

# Configure Python and pip
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)
use_repo(python, "python_3_13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//integrationtest/testcontainers:requirements_lock.txt",
)
use_repo(pip, "pip")

# Pull Alpine Linux as base image
pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "alpine",
    digest = "sha256:28bd5fe8b56d1bd048e5babf5b10710ebe0bae67db86916198a6eec434943f8b",
    layer_handling = "lazy",
    registries = [
        "mirror.gcr.io",
        "index.docker.io",
    ],
    repository = "library/alpine",
    tag = "3.24",
)

pull(
    name = "cuda",
    digest = "sha256:1f1d0dac55c5ed0bfc27fb0a1471defdf19000967bd6cd829068f7135ffd259d",
    registries = [
        "mirror.gcr.io",
        "index.docker.io",
    ],
    repository = "nvidia/cuda",
    tag = "13.3.0-tensorrt-runtime-ubuntu24.04",
)

# image that contains a manifest without explicit mediaType field
pull(
    name = "envoy",
    digest = "sha256:d59f7f5fa10cff6d5892b6c5e7df5c9297ddfb2c3683e33fbfb82da24de4fa66",
    repository = "envoyproxy/envoy",
    tag = "v1.39.0",
)

pull(
    name = "neo4j",
    digest = "sha256:a2d0536cfa551894cad0d6db3273c5f39acb66c13600c2a1778a0febbdafab26",
    layer_handling = "lazy",
    registry = "index.docker.io",
    repository = "library/neo4j",
    tag = "5.26.24-ubi9",
)

# Example of pulling from GCR by tag without digest
# This uses the new unsafe_allow_tag_without_digest flag
# which is useful when you're managing reproducibility through content-based tags
pull(
    name = "distroless_base_gcr",
    layer_handling = "lazy",
    registry = "gcr.io",
    repository = "distroless/base-debian12",
    tag = "latest",
    unsafe_allow_tag_without_digest = True,
)

pull(
    name = "distroless_static",
    digest = "sha256:9197324ba51d9cd071af8505989365c006adf9d6d2067eada25aef00abbb5278",
    registry = "gcr.io",
    repository = "distroless/static",
)

pull(
    name = "nanoserver",
    digest = "sha256:4bfc3ec32a8b9bb5e7a182440c517b0706267d88fda77b54acddf819920400ad",
    registry = "mcr.microsoft.com",
    repository = "windows/nanoserver",
)

images = use_extension("@rules_img//img:extensions.bzl", "images")
images.pull(
    name = "nginx",
    digest = "sha256:5a88c9c45479443d7be2eadc894b4ed0a9801bae03d97a5760ae13b5c2005942",
    registries = [
        "mirror.gcr.io",
        "index.docker.io",
    ],
    repository = "library/nginx",
)
images.settings(
    hub_repo = "enabled",
    image_repos = "enabled",
)
use_repo(images, "rules_img_images.bzl", nginx = "img_029d4461bd98f124e531380505ceea2072418fdf28752aa73b7b273ba3048903")
