load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:multi_deploy.bzl", "multi_deploy")

go_library(
    name = "app_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/rules_img/e2e/go/image",
    visibility = ["//visibility:private"],
    deps = [
        "//architecturevariant",
    ],
)

go_binary(
    name = "app",
    # "args" is preserved when using layer_from_binary (see e2e/go/layer_from_binary_example)
    args = [
        "This greeting is part of argv.",
        "It was provided via the \"args\" attribute of go_binary $(rlocationpath main.go).",
        "--define=CHEESE=$(CHEESE)",
    ],
    data = ["main.go"],
    embed = [":app_lib"],
    # "env" is preserved when using layer_from_binary (see e2e/go/layer_from_binary_example)
    env = {
        "ENV_GREETING": "This is a special gretting from the \"env\" attribute of go_binary $(rlocationpath main.go).",
    },
    pure = "on",
    visibility = ["//visibility:public"],
)

multi_deploy(
    name = "deploy_all",
    operations = [
        "//customization:push",
        "//image:load",
        "//image:push",
        "//multiarch:push",
    ],
)
