module(name = "go_e2e")

# BEGIN BAZEL_DEP
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_pull_tool")
local_path_override(
    module_name = "rules_img_pull_tool",
    path = "../../pull_tool",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../img_tool",
)

register_toolchains("@rules_img_tool//toolchain:all")

# Delete this before releasing!!
# TODO: remove this before releasing!!
git_override(
    module_name = "rules_runfiles_stub",
    commit = "206eb63bb32104f162346b99a53eb60c13ef6a9c",
    remote = "https://github.com/malt3/runfiles-stub.git",
)
# END BAZEL_DEP

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
