load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_image_layer", "py_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@pip//:requirements.bzl", "requirement")
load("@rules_img//img:image.bzl", "image_index", "image_manifest")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:multi_deploy.bzl", "multi_deploy")
load("@rules_img//img:push.bzl", "image_push")

py_library(
    name = "hello_world_lib",
    srcs = [
        "__init__.py",
        "app.py",
    ],
    visibility = ["//oci_python_image:__subpackages__"],
    deps = [requirement("cowsay")],
)

py_binary(
    name = "hello_world_app",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = [
        "//image_from_binary_example:__subpackages__",
        "//oci_python_image:__subpackages__",
    ],
    deps = [":hello_world_lib"],
)

py_image_layer(
    name = "layers",
    binary = ":hello_world_app",
)

image_manifest(
    name = "image",
    base = "@ubuntu",
    entrypoint = ["/hello_world_app"],
    layers = [":layers"],
)

image_index(
    name = "multiarch_image",
    manifests = [":image"],
    platforms = [
        "//platform:linux_arm64",
        "//platform:linux_amd64",
    ],
)

image_load(
    name = "load_single_arch",
    image = ":image",
    # Set the destination registry per-image here, or globally in .bazelrc via
    # --@rules_img//img/settings:destination_registry=docker.acme.tld
    # registry = "docker.acme.tld",
    repository = "malt3/rules_img/python",
    tag = "sideloaded",
    visibility = ["//visibility:public"],
)

image_load(
    name = "load_image",
    image = ":multiarch_image",
    # Set the destination registry per-image here, or globally in .bazelrc via
    # --@rules_img//img/settings:destination_registry=docker.acme.tld
    # registry = "docker.acme.tld",
    repository = "malt3/rules_img/python",
    tag = "sideloaded",
    visibility = ["//visibility:public"],
)

image_push(
    name = "push_image",
    image = ":multiarch_image",
    # Set the destination registry per-image here, or globally in .bazelrc via
    # --@rules_img//img/settings:destination_registry=docker.acme.tld
    # registry = "docker.acme.tld",
    repository = "malt3/rules_img/python",
    tag = "latest",
    visibility = ["//visibility:public"],
)

build_test(
    name = "test",
    targets = [
        ":hello_world_lib",
        ":hello_world_app",
        ":layers",
        ":image",
        ":multiarch_image",
        "load_single_arch",
        ":load_image",
        ":push_image",
    ],
)

multi_deploy(
    name = "deploy",
    operations = [
        "//:load_image",
        "//:load_single_arch",
        "//:push_image",
        "//image_from_binary_example:push",
    ],
)

multi_deploy(
    name = "push",
    deploy_operations = [
        "push",
    ],
    operations = [
        "//:push_image",
        "//image_from_binary_example:push",
    ],
)

multi_deploy(
    name = "load",
    deploy_operations = [
        "load",
    ],
    operations = [
        "//:load_image",
        "//:load_single_arch",
    ],
)
