module(name = "python_e2e")

# BEGIN BAZEL_DEP
bazel_dep(name = "rules_img")
local_path_override(
    module_name = "rules_img",
    path = "../..",
)

bazel_dep(name = "rules_img_tool")
local_path_override(
    module_name = "rules_img_tool",
    path = "../../img_tool",
)

register_toolchains("@rules_img_tool//toolchain:all")
# END BAZEL_DEP

bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")  # only exists to upgrade bazel_lib used by aspect_rules_py to a version compatible with Bazel 9
bazel_dep(name = "aspect_rules_py", version = "1.11.7")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)
use_repo(python, "python_3_13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//requirements:requirements_lock.txt",
)
use_repo(pip, "pip")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "ubuntu",
    digest = "sha256:b7f48194d4d8b763a478a621cdc81c27be222ba2206ca3ca6bc42b49685f3d9e",
    registries = [
        "mirror.gcr.io",
        "index.docker.io",
    ],
    repository = "library/ubuntu",
    tag = "latest",
)
